[gd_scene load_steps=21 format=2]

[ext_resource path="res://Tep/Rong/dragon/Hurt2.png" type="Texture" id=1]
[ext_resource path="res://Tep/Rong/dragon/Walk1.png" type="Texture" id=2]
[ext_resource path="res://Tep/Rong/dragon/Walk3.png" type="Texture" id=3]
[ext_resource path="res://Tep/Rong/dragon/Death1.png" type="Texture" id=4]
[ext_resource path="res://Tep/Rong/dragon/Walk5.png" type="Texture" id=5]
[ext_resource path="res://Tep/Rong/dragon/Death4.png" type="Texture" id=6]
[ext_resource path="res://Tep/Rong/dragon/Death2.png" type="Texture" id=7]
[ext_resource path="res://Tep/Rong/dragon/Walk4.png" type="Texture" id=8]
[ext_resource path="res://Tep/Rong/dragon/Hurt1.png" type="Texture" id=9]
[ext_resource path="res://Tep/Rong/dragon/Death5.png" type="Texture" id=10]
[ext_resource path="res://Tep/Rong/Rong.gd" type="Script" id=11]
[ext_resource path="res://Tep/Rong/dragon/Death3.png" type="Texture" id=12]
[ext_resource path="res://Tep/Rong/dragon/Attack2.png" type="Texture" id=13]
[ext_resource path="res://Tep/Rong/dragon/Attack1.png" type="Texture" id=14]
[ext_resource path="res://Tep/Rong/dragon/Attack3.png" type="Texture" id=15]
[ext_resource path="res://DoHoa/MotSoThuKhac/ThanhMau/VIDA_10.png" type="Texture" id=16]
[ext_resource path="res://DoHoa/MotSoThuKhac/ThanhMau/VIDA_0.png" type="Texture" id=17]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": false,
"name": "TanCong",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": true,
"name": "Chet",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "BienMat",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "Chay",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 1 ) ],
"loop": false,
"name": "BiThuong",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 25.5192

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49.7026, 25.8529 )

[node name="KeThu_Rong" type="KinematicBody2D"]
position = Vector2( 851.13, 220.177 )
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 13.2222, -26.6843 )
scale = Vector2( -0.631079, 0.7818 )
frames = SubResource( 1 )
animation = "Chay"
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.16022, -1.55708 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -29.09, 17.6365 )
enabled = true

[node name="Rong" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rong"]
position = Vector2( 13.5886, -2.76865 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -22.1533, -86.2181 )

[node name="HP_RongLua" type="TextureProgress" parent="."]
margin_left = -26.6855
margin_top = -40.2253
margin_right = 351.315
margin_bottom = -0.225342
rect_scale = Vector2( 0.15, 0.15 )
max_value = 7.0
value = 3.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Rong" to="." method="_on_Rong_body_entered"]
